--- a/hw3c/.project
+++ b/hw3c/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>hw6b_julianDate</name>
+	<name>hw3c_DesigningClassComplex</name>
 	<comment></comment>
 	<projects>
 	</projects>
